assets/css/style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: Roboto;
}


.custom-rounded {
  border-radius: 15px;
}


.custom-bg-black {
  background-color: black;
}

.custom-bg-pink {
  background-color: #FF005C;
}

.custom-color-pink {
  color: #FF005C;
}

.media-icons {
  width: 2.5em;
  height: 2.5em;
  display: flex;
  justify-content: center;
  align-items: center;
}


/*Section contact-form*/
/*Background*/
#contact-form {
  background: url("../images/bg-contact-form.png") center no-repeat border-box;
  background-size: 100% 100%;
}

#submit-form-button {
  transform-origin: center;
  animation: ease-in infinite bouge-bcp;
  animation-duration: 7s;
}

#submit-form-button:hover {
  animation-play-state: paused;
}

@keyframes bouge-bcp {
  0% {
    transform: rotate(0deg);
  }
  2% {
    transform: rotate(10deg);
  }
  4% {
    transform: rotate(-10deg);
  }
  6% {
    transform: rotate(10deg);
  }
  8% {
    transform: rotate(-10deg);
  }
  10% {
    transform: rotate(10deg);
  }

  12% {
    transform: rotate(-10deg);
  }
  14% {
    transform: rotate(10deg);
  }
  16% {
    transform: rotate(-10deg);
  }
  18% {
    transform: rotate(10deg);
  }
  20% {
    transform: rotate(0deg);
  }

  50% {
    transform: rotate(0deg);
  }

  52% {
    transform: rotate(10deg);
  }
  54% {
    transform: rotate(-10deg);
  }
  56% {
    transform: rotate(10deg);
  }
  58% {
    transform: rotate(-10deg);
  }
  60% {
    transform: rotate(10deg);
  }

  62% {
    transform: rotate(-10deg);
  }
  64% {
    transform: rotate(10deg);
  }
  66% {
    transform: rotate(-10deg);
  }
  68% {
    transform: rotate(10deg);
  }
  70% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(0deg);
  }
}
/*end Section contact-form*/

/*Section collection*/
/*positionning of singular icon-image in all blocks*/
#collection .icon-place div {
  width: 100%;
  padding-top: 100%;
  bottom: 0;
  left: 0;
  z-index: 4;
}

/*Background icon-image block flare-hats*/
#collection #flare-hats_block .icon-place div {
  background: url("../images/flare-hats.png") center no-repeat border-box;
  background-size: cover;
}

/*Background icon-image block weddings-gowns*/
#collection #weddings-gowns_block .icon-place div {
  background: url("../images/weddings-gowns.png") center no-repeat border-box;
  background-size: contain;
}

/*Background icon-image block casual-wears*/
#collection #casual-wears_block .icon-place div {
  background: url("../images/casual-wears.png") center no-repeat border-box;
  background-size: contain;
}



/*positionning of logo in each block*/
#collection .logo-black {
  background: url("../images/logo-black.png") center no-repeat border-box;
  background-size: contain;

  top: 0;
  right: 0;
}

#collection .logo-pink {
  background: url("../images/logo-pink.png") center no-repeat border-box;
  background-size: contain;

  top: 0;
  right: 0;
}
/*end Section collection*/

/*Section reviews*/
/*Photo reviewer1*/
#reviews #photo-reviewer1 {
  padding-bottom: 100%;
  background: url("../images/photo-reviewer1.png") center no-repeat border-box;
  background-size: contain;
}

/*Photo reviewer1*/
#reviews #photo-reviewer2 {
  padding-top: 100%;
  background: url("../images/photo-reviewer2.png") center no-repeat border-box;
  background-size: contain;
}
/*end Section reviews*/

/*Section About*/
#about #photo-glenn-core {
  padding-top: 100%;
  background: url("../images/photo-glenn-core.png") center no-repeat border-box;
  background-size: contain;
}

#about .custom-border-left {
  border-left: solid 3px #FF005C;
}

#about #icon-facebook {
  background: url("../images/facebook.png") no-repeat center border-box;
  background-size: contain;
  padding-top: 100%;
}

#about #icon-instagram {
  background: url("../images/instagram.png") no-repeat center border-box;
  background-size: contain;
  padding-top: 100%;
}

#about #icon-twitter {
  background: url("../images/twitter.png") no-repeat center border-box;
  background-size: contain;
  padding-top: 100%;
}
/*end Section About*/

/*Section Projects*/
/*background photo each project block*/
#projects #photo-project1 {
  background: url("../images/photo-project1.png") no-repeat center border-box;
  background-size: contain;
  padding-top: 100%;
}


#projects #photo-project2 {
  background: url("../images/photo-project2.png") no-repeat center border-box;
  border-radius: 50%;
  background-color: white;
  background-size: contain;
  padding-top: 100%;
}

#projects #photo-project3 {
  background: url("../images/photo-project3.png") no-repeat center border-box;
  background-size: contain;
  padding-top: 100%;
}

#projects #photo-project4 {
  background: url("../images/photo-project4.png") no-repeat center border-box;
  background-size: contain;
  padding-top: 100%;
}

#projects #photo-project5 {
  background: url("../images/photo-project5.png") no-repeat center border-box;
  background-size: contain;
  padding-top: 100%;
}

#projects #photo-project6 {
  background: url("../images/photo-project6.png") no-repeat center border-box;
  background-size: contain;
  padding-top: 100%;
}

/*#projects #calque-projects {
  opacity: 0;
  z-index: 3;
  background-color: #1f010c;
  transition: opacity 0.5sec;
}

#projects #calque-projects:hover {
  
  opacity: 0.3;
}*/

#projects .single-project {
  border-radius: 10em;
  margin-bottom: 2em;
  transition: 1sec;
  
}


#projects .single-project:hover {
  z-index: 4;
  background-color: #F6F1F1;
  box-shadow: 1px 1px 8px #dfdede;
  transform: scale(1.1);
}
/*end Section Projects*/

/*Section Sketch-projects*/
/*background of each sketch-project*/
#sketch-projects #image-sketch-project1 {
  background: url("../images/image-sketch-project1.png") no-repeat center bottom/93% border-box;
  left: 0;
  bottom: -80px;
}

#sketch-projects #image-sketch-project2 {
  background: url("../images/image-sketch-project2.png") no-repeat center bottom/87% border-box;

  left: 0;
  bottom: -80px;
}

#sketch-projects #image-sketch-project3 {
  background: url("../images/image-sketch-project3.png") no-repeat center 80%/100% border-box;

  left: 0;
  bottom: -80px;
}

.custom-bg-sketch1,
.custom-bg-sketch3 {
  background-color: #F6F1F1;
}

.custom-bg-sketch2 {
  background-color: #F2F2F2;
}

/*Section Sketch-projects*/
.group-sketch-projects > div {
  width: 388px;
  margin-bottom: 90px;
}
/*end Section Sketch-projects*/

/*end Section Sketch-projects*/

/*Section Home*/
#home {
  background: url('../images/bg-home_first.png') right no-repeat border-box;
  background-size: contain;  
}

#home #logo {
  padding-top: 100%;
  background: url("../images/logo_png.png") top left no-repeat border-box;
  background-size: contain;

  left: 8%;
}

#home .rotate {
  transform: rotate(-90deg) translateX(50%) translateY(-100%);
  cursor: pointer;

  left: 0;
  bottom: 8%;
}

#home .custom-bg-circle {
  width: 40%;
  padding-top: 40%;
  top: 0;
  right: 0;

  border-radius: 0 0 0 10em;
}
/*end Section Home*/

/*Debug border*/
.border-debug1 {
  border: dashed green 3px;
}

.border-debug2 {
  border: dotted red 3px;
}

.border-debug3 {
  border: solid blue 3px;
}
/*end Debug border*/



/*Responsive file*/
/* Extra small devices (portrait phones, less than 576px) */


@media (max-width: 575.98px) {
  html {
    font-size: xx-small;
  }

  /*Section collection*/
  /*positionning of singular icon-image in all blocks*/
  .icon-place {
    width: 35%;
  }

  #flare-hats_block {
    margin-top: 10%;
  }

  #weddings-gowns_block {
    
    margin-top: 30%;
    margin-bottom: 30%;
  }
  /*end section collection*/

  /*Section Sketch-projects*/
  .group-sketch-projects > div {
    font-size: x-small;
  }
  /*end Section Sketch-projects*/

  /*Section Home*/
  #home .rotate {
    left: 2%;
  }

  #home .custom-bg-circle {
    width: 25%;
    padding-top: 25%;

    border-radius: 0 0 0 10em;

    background: url("../images/menu-bar.png") 60% 45% no-repeat;
    background-size: 45%;
  }
  /*end Section Home*/

  @media (max-width: 375.98px) {
    /*Section collection*/
    /*positionning of singular icon-image in all blocks*/
    #collection .icon-place div {
      bottom: 15px;
    }
  
    #flare-hats_block {
      margin-top: -10%;
    }
    /*end section collection*/

    /*Section Sketch-projects*/
    .group-sketch-projects,
    .group-sketch-projects .description {
      padding-left: 5px!important;
      padding-right: 5px!important;
    }

    .group-sketch-projects > div {
      width: auto;
      margin-bottom: 30px;
    }

    #sketch-projects #image-sketch-project1,
    #sketch-projects #image-sketch-project3 {
      background-position: 0% center;
    }

    #sketch-projects #image-sketch-project2 {
      background-position: top center;
    }

  /*end Section Sketch-projects*/
  }

  /*Section sketch-projects*/
  #sketch-projects #image-sketch-project1,
  #sketch-projects #image-sketch-project2,
  #sketch-projects #image-sketch-project3 {
    background-size: contain;
  }
  
  /*end Section sketch-projects*/
}

/* Small devices (landscape phones, less than 768px) */
@media (min-width: 576px) and (max-width: 767.98px) {
  html {
    font-size: x-small;
  }

  /*Section sketch-projects*/
  #sketch-projects #image-sketch-project1,
  #sketch-projects #image-sketch-project2,
  #sketch-projects #image-sketch-project3 {
    background-size: contain;
  }
  
  /*end Section sketch-projects*/
}

/* Medium devices (tablets, less than 992px) */
@media (min-width: 768px) and (max-width: 991.98px) {
  html {
    font-size: 12px;
  }

  /*Section sketch-projects*/
  #sketch-projects #image-sketch-project1,
  #sketch-projects #image-sketch-project2,
  #sketch-projects #image-sketch-project3 {
    background-size: contain;
  }
  
  /*end Section sketch-projects*/
}

/* Large devices (desktops, less than 1200px) */
@media (min-width: 992px) and (max-width: 1199.98px) {
  html {
    font-size: 15px;
  }

  /*Section Home*/
  #home .rotate {
    left: -0.7%;
  }
  /*end Section Home*/
}

/*Extra large devices (large desktops, 1200px and up)*/
@media (min-width: 1200px) {
  html {
    font-size: 15px;
    max-width: 1400px;
    margin: auto;
  }

  /*Section Home*/
  #home .rotate {
    left: -0.9%;
  }
  /*end Section Home*/
}

